tests/grammar/snapshots/r#mod__grammar__alpha034__function_def-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"fun func(a : Num) {}\"))"
---
[
    (
        FunctionDefinition(
            (
                false,
                0..3,
            ),
            (
                "fun",
                0..3,
            ),
            (
                "func",
                4..8,
            ),
            [
                (
                    Typed(
                        (
                            "a",
                            9..10,
                        ),
                        (
                            Num,
                            13..16,
                        ),
                    ),
                    9..16,
                ),
            ],
            None,
            [],
        ),
        0..20,
    ),
]
