tests/grammar/snapshots/r#mod__grammar__alpha034__function_def-6.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"\n        fun func(a: Num, b: Text, c: Bool): Num {\n            echo 10\n\n            return 10\n        }\n    \"))"
---
[
    (
        FunctionDefinition(
            [],
            (
                false,
                9..12,
            ),
            (
                "fun",
                9..12,
            ),
            (
                "func",
                13..17,
            ),
            [
                (
                    Typed(
                        (
                            false,
                            18..18,
                        ),
                        (
                            "a",
                            18..19,
                        ),
                        (
                            Num,
                            21..24,
                        ),
                    ),
                    18..24,
                ),
                (
                    Typed(
                        (
                            false,
                            26..25,
                        ),
                        (
                            "b",
                            26..27,
                        ),
                        (
                            Text,
                            29..33,
                        ),
                    ),
                    26..33,
                ),
                (
                    Typed(
                        (
                            false,
                            35..34,
                        ),
                        (
                            "c",
                            35..36,
                        ),
                        (
                            Bool,
                            38..42,
                        ),
                    ),
                    35..42,
                ),
            ],
            Some(
                (
                    Num,
                    45..48,
                ),
            ),
            [
                (
                    Echo(
                        (
                            "echo",
                            63..67,
                        ),
                        (
                            Number(
                                (
                                    10.0,
                                    68..70,
                                ),
                            ),
                            68..70,
                        ),
                    ),
                    63..70,
                ),
                (
                    Return(
                        (
                            "return",
                            84..90,
                        ),
                        Some(
                            (
                                Number(
                                    (
                                        10.0,
                                        91..93,
                                    ),
                                ),
                                91..93,
                            ),
                        ),
                    ),
                    84..93,
                ),
            ],
        ),
        9..103,
    ),
]
