tests/grammar/snapshots/r#mod__grammar__alpha034__function_def-8.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"fun foo {\n        echo 10\n    }\"))"
---
(
    Some(
        [
            (
                FunctionDefinition(
                    [],
                    (
                        false,
                        0..3,
                    ),
                    (
                        "fun",
                        0..3,
                    ),
                    (
                        "foo",
                        4..7,
                    ),
                    [],
                    None,
                    [
                        (
                            Echo(
                                (
                                    "echo",
                                    18..22,
                                ),
                                (
                                    Number(
                                        (
                                            10.0,
                                            23..25,
                                        ),
                                    ),
                                    23..25,
                                ),
                            ),
                            18..25,
                        ),
                    ],
                ),
                0..31,
            ),
        ],
    ),
    [
        found "{" at 8..9 expected '"("',
    ],
)
