tests/grammar/snapshots/r#mod__grammar__alpha034__function_invocation-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"func(1, 2)\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        FunctionInvocation(
                            [],
                            (
                                "func",
                                0..4,
                            ),
                            [
                                (
                                    Number(
                                        (
                                            1.0,
                                            5..6,
                                        ),
                                    ),
                                    5..6,
                                ),
                                (
                                    Number(
                                        (
                                            2.0,
                                            8..9,
                                        ),
                                    ),
                                    8..9,
                                ),
                            ],
                            None,
                        ),
                        0..10,
                    ),
                ),
                0..10,
            ),
        ),
        0..10,
    ),
]
