tests/grammar/snapshots/r#mod__grammar__alpha034__function_invocation-6.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"func(,)\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                FunctionInvocation(
                                    [],
                                    (
                                        "func",
                                        0..4,
                                    ),
                                    [
                                        (
                                            Error,
                                            5..6,
                                        ),
                                    ],
                                    None,
                                ),
                                0..7,
                            ),
                        ),
                        0..7,
                    ),
                ),
                0..7,
            ),
        ],
    ),
    [
        found "," at 5..6 expected "expression",
    ],
)
