tests/grammar/snapshots/r#mod__grammar__alpha034__function_invocation-7.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"func(1 2\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                FunctionInvocation(
                                    [],
                                    (
                                        "func",
                                        0..4,
                                    ),
                                    [
                                        (
                                            Number(
                                                (
                                                    1.0,
                                                    5..6,
                                                ),
                                            ),
                                            5..6,
                                        ),
                                        (
                                            Number(
                                                (
                                                    2.0,
                                                    7..8,
                                                ),
                                            ),
                                            7..8,
                                        ),
                                    ],
                                    None,
                                ),
                                0..8,
                            ),
                        ),
                        0..8,
                    ),
                ),
                0..8,
            ),
        ],
    ),
    [
        found "2" at 7..8 expected '"as"', '"is"', '"*"', '"/"', '"%"', '"+"', '"-"', '">="', '">"', '"<="', '"<"', '"=="', '"!="', '"and"', '"or"', '".."', '"then"', or '","',
        found end of input at 8..8 expected '"as"', '"is"', '"*"', '"/"', '"%"', '"+"', '"-"', '">="', '">"', '"<="', '"<"', '"=="', '"!="', '"and"', '"or"', '".."', '"then"', '","', or '")"',
    ],
)
